# TensorflowCNN

./: README.md  pyproject.toml
L01_Basics/: S01_Basic_Image_Classification.py  S02_Basic_Text_Classification.py
L01_Basics/notebook/: S01_Basic_Classification.ipynb
L02_Advance/: S02_GPU_acceleration.py
