[tool.poetry]
name = "src"
version = "0.1.0"
description = "This is my tensorflow cnn play ground"
authors = ["pengfei <liu.pengfei@hotmail.fr>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
tensorflow = "^2.5.0"
matplotlib = "^3.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
